--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "docusaurus": "docusaurus",
     "setup-cname": "node ./scripts/setup-cname.js",
     "start": "docusaurus start --port 3000 --host 0.0.0.0",
-    "build": "docusaurus build",
+    "build": "echo 122223 && NODE_OPTIONS=--openssl-legacy-provider docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "npm run setup-cname && docusaurus deploy",
     "clear": "docusaurus clear",
